--- a/探索的结果.md
+++ b/探索的结果.md
@@ -6,8 +6,9 @@
 
 我并未通过构思来完成制作，而是制作开启了我的构思和幻想。我会感觉这些图像像是阶梯，或者刷子。三个主要图像在对角线变大变小运动，一遍一遍的洗刷、攀升，留下痕迹、清除、留下。我发现这个每一帧都是特殊的，根据鼠标的晃动轨迹和速度还能够继续添加一层阶梯。鼠标的圆形无法覆盖三个主要图形，两个方形一个椭圆，但是可以盖过他们的轨迹，在略透明额方形后其实也能够依稀看到鼠标在背后划过。有时在右上和左下角会看到没有擦拭掉的阶梯轨迹，我会感到很庆幸，不愿意它们被抹平。这些是我的观察，再出发点之后的才产生构思，也是刺激我的惊喜收获。
 
+创作还在盲人摸象中..
 
-         // Modify by gasii
+     // Modify by gasii
      // Learning processing
      // 1031230593@qq.com
      float x = 10;
@@ -21,9 +22,8 @@
        size(800, 800);
        smooth();  
        background(120,25,50,10);
-      
-}
-   
+     }   
+
 
     void draw() {
       ellipse(mouseX, mouseY, 90, 80);
